
=======
CHANGES
=======
0.5.4
=====
- orm
    - Fixed the "set collection" function on "dynamic" relations
      to initiate events correctly.  Previously a collection
      could only be assigned to a pending parent instance,
      otherwise modified events would not be fired correctly.
      Set collection is now compatible with merge(), 
      fixes [ticket:1352].
      
0.5.3
=====
- orm
    - The "objects" argument to session.flush() is deprecated.
      State which represents the linkage between a parent and
      child object does not support "flushed" status on
      one side of the link and not the other, so supporting
      this operation leads to misleading results.
      [ticket:1315]
    
    - Query now implements __clause_element__() which produces
      its selectable, which means a Query instance can be accepted 
      in many SQL expressions, including col.in_(query), 
      union(query1, query2), select([foo]).select_from(query), 
      etc.

    - Query.join() can now construct multiple FROM clauses, if 
      needed.  Such as, query(A, B).join(A.x).join(B.y)
      might say SELECT A.*, B.* FROM A JOIN X, B JOIN Y.  
      Eager loading can also tack its joins onto those 
      multiple FROM clauses.  [ticket:1337]

    - Fixed bug in dynamic_loader() where append/remove events
      after construction time were not being propagated to the 
      UOW to pick up on flush(). [ticket:1347]
      
    - Fixed bug where column_prefix wasn't being checked before
      not mapping an attribute that already had class-level 
      name present.

    - a session.expire() on a particular collection attribute
      will clear any pending backref additions as well, so that
      the next access correctly returns only what was present
      in the database.  Presents some degree of a workaround for 
      [ticket:1315], although we are considering removing the 
      flush([objects]) feature altogether.
    